add: category and service api
