# app.js
@@ -4,7 +4,8 @@ import cors from "cors";
 import swaggerUi from "swagger-ui-express";
 import swaggerfile from "./swagger-docs/swagger.json" assert { type: "json" };
 
-import v1AdminProductRouter from "./routes/v1/admin/products.js";
+import categoriesRouter from "./routes/v1/admin/categories.js";
+import servicesRouter from "./routes/v1/admin/services.js"
 
 import v1UserProductRouter from "./routes/v1/user/products.js";
 import registerRouter from "./routes/v1/user/register.js"
@@ -16,10 +17,10 @@ app.use(cors());
 app.use(bodyParser.json());
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerfile));
 
-app.use("/v1/admin/products", v1AdminProductRouter);
+app.use("/v1/admin/categories", categoriesRouter);
+app.use("/v1/admin/services", servicesRouter)
 
 app.use("/v1/user/products", v1UserProductRouter);
-
 app.use("/register", registerRouter)
 
 app.listen(port, () => {
